# prisoner

./: README.md  main.py  pyproject.toml
prisoner/: agent.py  brain.py  simulation.py
tests/: test_agent.py  test_simulation.py
